...
        android:gravity="center"
        android:padding="2dp"
        android:text="salmonfs://"
        android:textColor="#FFFFFF" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        tools:listitem="@layout/file_item"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/path"
        app:layout_constraintBottom_toTopOf="@id/status_control_layout"
        android:layout_alignParentBottom="true" />
...
